[workspace]
members = [
    "common",
    "administration/contract",
    "configuration/contract",
    "main/contract",
    "price-oracle/contract",
    "nft-core/contract",
    "nft-core/client/*",
    "nft-core/test-contracts/*",
    "nft-core/tests",
    "nft-contract/contract",
    "database/contract",
    "registry/contract",
    "tests",
]
