[workspace]
members = [
    "common",
    "administration/contract",
    "nft-core/contract",
    "nft-core/client/*",
    "nft-core/test-contracts/*",
    "nft-core/tests",
    "nft-contract/contract",
    # "database/contract",
    # "price-oracle/contract",
    # "registry/contract",
    # "main/contract",
    "tests",
]
