[package]
name = "common-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.4", default-features = false }
casper-types = { version = "1.5.0", default-features = false }
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
sha3 = { version = "0.10.1", default-features = false }

[lib]
crate-type=["rlib"]

[profile.release]
codegen-units = 1
lto = true

