[package]
name = "common-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "3.0.0", default-features = false }
casper-types = { version = "3.0.0", default-features = false }

serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
serde-json-wasm = { version = "0.5.0", default-features = false }

sha3 = { version = "0.10.1", default-features = false }

[lib]
crate-type=["rlib"]

[profile.release]
codegen-units = 1
lto = true

