[package]
name    = "common-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "3.0.0", default-features = false }
casper-types    = { version = "3.0.0", default-features = false }

serde           = { version = "1.0.188", default-features = false }
serde_json      = { version = "1.0.107", default-features = false }
serde-json-wasm = { version = "1.0.0", default-features = false }

sha3 = { version = "0.10.8", default-features = false }

[lib]
crate-type = [
    "rlib",
]

[profile.release]
codegen-units = 1
lto           = true
