[package]
name    = "authorities-tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = { version = "3.0.0", default-features = false }
casper-types    = { version = "3.0.0", default-features = false }

casper-engine-test-support = { version = "2.2.0", features = [
    "test-support",
] }
casper-execution-engine = "2.0.1"

[[bin]]
name    = "integration-tests"
path    = "src/integration_tests.rs"
bench   = false
doctest = false
