[package]
name = "database"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = {version = "1.4.3", features = ["test-support"]}
casper-types = "1.5.0"
common-lib = { path = "../../common", default-features = false }

[[bin]]
name = "database-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

