[package]
name = "database"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "2.0.0", default-features = false }
casper-types = { version = "2.0.0", default-features = false }
common-lib = { path = "../../common", default-features = false }

[[bin]]
name = "database-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
