[package]
name = "main"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "3.0.0"
casper-types = "3.0.0"
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
casper-serde-json-wasm = { git = "https://github.com/darthsiroftardis/casper-serde-json-wasm", branch = "casper-no-std"}
common-lib = { path = "../../common", default-features = false }
base16 = { version = "0.2", default-features = false, features = ["alloc"] }

[[bin]]
name = "main-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

