[package]
name = "nft-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.4", features = ["test-support"] }
casper-types = "1.5.0"
common-lib = { path = "../../common", default-features = false }
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
serde-json-wasm = { version = "0.5.0", default-features = false }

[[bin]]
name = "nft-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

