[package]
name = "nft-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "3.0.0", default-features = false, features = ["test-support"] }
casper-types = "3.0.0"
common-lib = { path = "../../common", default-features = false }
serde = { version = "1.0.163", default-features = false }
serde_json = { version = "1.0.96", default-features = false }
serde-json-wasm = { version = "0.5.1", default-features = false }

[[bin]]
name = "nft-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

