[package]
name = "nft-core"
version = "1.1.1"
edition = "2018"

[dependencies]
casper-contract = {version = "3.0.0", features = ["test-support"]}
casper-types = "3.0.0"
serde = { version = "1.0.163", features = ["derive", "alloc"], default-features = false }
base16 = { version = "0.2", default-features = false, features = ["alloc"] }
casper-serde-json-wasm = { git = "https://github.com/darthsiroftardis/casper-serde-json-wasm", branch = "casper-no-std"}

[[bin]]
name = "nft-core-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

