[package]
name = "price-oracle"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
common-lib = { path = "../../common", default-features = false }

[[bin]]
name = "price-oracle-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

