[package]
name = "price-oracle"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "3.0.0", default-features = false }
casper-types = { version = "4.0.0", default-features = false }
common-lib = { path = "../../common", default-features = false }

[[bin]]
name = "price-oracle-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
