[package]
name = "registry-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "2.0.0"
casper-types = "2.0.0"
common-lib = { path = "../../common", default-features = false }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
