[package]
name    = "balance_of_session"
version = "1.1.1"
edition = "2018"

[dependencies]
casper-contract = { version = "3.0.0", default-features = false }
casper-types    = { version = "3.0.0", default-features = false }

[[bin]]
name    = "balance_of_call"
path    = "src/main.rs"
bench   = false
doctest = false
test    = false

[profile.release]
codegen-units = 1
lto           = true
