[package]
name    = "updated_receipts"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "3.0.0", default-features = false }
casper-types    = { version = "3.0.0", default-features = false }

[[bin]]
name    = "updated_receipts"
path    = "src/main.rs"
bench   = false
doctest = false
test    = false

[profile.release]
codegen-units = 1
lto           = true
